# Launch

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  Launch.sln  README.md
Launch/: Launch.vcxproj
Launch/x64/Debug/: Launch.exe.recipe
Launch/x64/Debug/Launch.tlog/: Launch.lastbuildstate
include/imgui-1.92.2b/: imgui.h
src/: main.cpp
src/Gui/: gui.cpp  gui.h  guimain.cpp  guimain.h  guisetting.cpp  guisetting.h
src/MemoryManager/: MemoryManager.cpp  MemoryManager.h
src/ProcessHandler/: ProcessHandler.cpp  ProcessHandler.h
src/Utils/: utils.cpp  utils.h
